crates/phoenix-codegen/src/snapshots/phoenix_codegen__openapi__tests__openapi_primitive_types.snap
---
source: crates/phoenix-codegen/src/openapi.rs
expression: "serde_json::to_string_pretty(&combined).unwrap()"
---
{
  "bool": {
    "type": "boolean"
  },
  "float": {
    "type": "number"
  },
  "int": {
    "type": "integer"
  },
  "string": {
    "type": "string"
  }
}
