crates/phoenix-codegen/src/snapshots/phoenix_codegen__openapi__tests__openapi_request_header.snap
---
source: crates/phoenix-codegen/src/openapi.rs
expression: spec
---
{
  "components": {
    "schemas": {
      "Order": {
        "properties": {
          "id": {
            "type": "integer"
          }
        },
        "required": [
          "id"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "API",
    "version": "1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/api/orders": {
      "post": {
        "operationId": "createOrder",
        "parameters": [
          {
            "in": "header",
            "name": "Idempotency-Key",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Order"
                }
              }
            },
            "description": "Successful response"
          }
        },
        "summary": "createOrder"
      }
    }
  },
  "servers": [
    {
      "url": "/"
    }
  ]
}
