crates/phoenix-codegen/src/snapshots/phoenix_codegen__openapi__tests__openapi_response_header.snap
---
source: crates/phoenix-codegen/src/openapi.rs
expression: spec
---
{
  "components": {
    "schemas": {
      "Post": {
        "properties": {
          "id": {
            "type": "integer"
          }
        },
        "required": [
          "id"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "API",
    "version": "1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/api/posts/{id}": {
      "get": {
        "operationId": "getPost",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Post"
                }
              }
            },
            "description": "Successful response",
            "headers": {
              "X-RateLimit-Remaining": {
                "required": true,
                "schema": {
                  "type": "integer"
                }
              }
            }
          }
        },
        "summary": "getPost"
      }
    }
  },
  "servers": [
    {
      "url": "/"
    }
  ]
}
