crates/phoenix-codegen/src/snapshots/phoenix_codegen__openapi__tests__openapi_simple_enum.snap
---
source: crates/phoenix-codegen/src/openapi.rs
expression: spec
---
{
  "components": {
    "schemas": {
      "Role": {
        "enum": [
          "Admin",
          "Editor",
          "Viewer"
        ],
        "type": "string"
      }
    }
  },
  "info": {
    "title": "API",
    "version": "1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {},
  "servers": [
    {
      "url": "/"
    }
  ]
}
